<resources>
    <string name="app_name">Lock Note</string>
    <string name="pass_note">PassNote</string>
    <string name="encrypted_note_title">Encrypted Note</string>
    <string name="edit_text_title">Enter your note title here..</string>
    <string name="edit_text_body">Write here to note..</string>
    <string name="create_note_label">Create a new note</string>
    <string name="your_note_title">Your Note</string>
    <string name="save_note_desc">Save Note</string>
    <string name="save_note_title">Save Note</string>
    <string name="pass_book">PassBook</string>
    <string name="pass_view">Your Secret Note</string>
    <string name="security_check">Security Check</string>
    <string name="create_a_secret_code">Create a secret note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lock Note</string>
    <string name="nav_header_subtitle">Secure data and secure yourself, Enjoy!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pass">Locked Note</string>
    <string name="menu_online">Save Online</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="title_activity_home_page">Lock Note</string>
    <string name="online_note_msg">Connect your app with server to save your data forever!!</string>
    <string name="welcome_notice">Welcome! Your are signed in! Keep making your note and secret note. Connect your phone to internet frequently and save your data to server automatically.  Thank for using this app!</string>
</resources>
